--- a/index.html
+++ b/index.html
@@ -10,6 +10,21 @@
     <title>Almacen</title>
 </head>
 <body>
+    <div class="header">
+        <p class="logo">Almacen</p>
+        <div class="cart"><i class="fa-solid fa-cart-shopping"></i><p id="count">0</p></div>
+    </div>
+    <div class="container">
+        <div id="root"></div>
+        <div class="sidebar">
+            <div class="head"><p>Mi carrito</p></div>
+            <div id="cartItem">Tu carrito esta vacio</div>
+            <div class="foot">
+                <h3>Total</h3>
+                <h2 id="total">$ 0.00</h2>
+            </div>
+        </div>
+    </div>
     <script src="./app.js"></script>
 </body>
 </html>
