--- a/index.html
+++ b/index.html
@@ -1,30 +1,141 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="app.js">
-    <script src="https://kit.fontawesome.com/15137737a5.js" crossorigin="anonymous"></script>
-    <title>Almacen</title>
-</head>
-<body>
-    <div class="header">
-        <p class="logo">Almacen</p>
-        <div class="cart"><i class="fa-solid fa-cart-shopping"></i><p id="count">0</p></div>
-    </div>
-    <div class="container">
-        <div id="root"></div>
-        <div class="sidebar">
-            <div class="head"><p>Mi carrito</p></div>
-            <div id="cartItem">Tu carrito esta vacio</div>
-            <div class="foot">
-                <h3>Total</h3>
-                <h2 id="total">$ 0.00</h2>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap demo</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="stylesheet" href="./app.js">
+  </head>
+  <body>
+    <header>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">LOGO</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./productos.html">Productos</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./sobre.html">Sobre</a>
+                  </li>
+                </ul>
+                <form class="d-flex" role="search">
+                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                  <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+                <div>
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                          <a class="nav-link active" aria-current="page" href="./contactanos.html">Contactanos </a>
+                        </li>
+                      </ul>
+                </div>
+              </div>
             </div>
+          </nav>
+    </header>
+    <main>
+        <section>
+            <div id="carouselExample" class="carousel slide">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="https://http2.mlstatic.com/D_NQ_NP_801919-MLC52841284457_122022-V.jpg" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="https://thumbs.dreamstime.com/z/caixas-da-cerveja-em-um-supermercado-ou-uma-loja-exterior-bebida-romena-durau-rom%C3%AAnia-%C2%BA-de-junho-151300319.jpg" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="https://http2.mlstatic.com/D_NQ_NP_801919-MLC52841284457_122022-V.jpg" class="d-block w-100" alt="...">
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
+        </section>
+        <section>
+            <div class="container-fluid">
+                <div class="m-3">
+                    <h2>Productos</h2>
+                </div>
+                <div class="row">
+                    <div class="col-md-3">
+                        <div class="card" style="width: 18rem;">
+                            <img src="https://http2.mlstatic.com/D_NQ_NP_801919-MLC52841284457_122022-V.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                              <h5 class="card-title">Card title</h5>
+                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                              <div class="d-flex flex-row-reverse">
+                                <a href="#" class="btn btn-primary">Agregar al carrito</a>
+                              </div>
+                            </div>
+                          </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="card" style="width: 18rem;">
+                            <img src="https://http2.mlstatic.com/D_NQ_NP_801919-MLC52841284457_122022-V.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                              <h5 class="card-title">Card title</h5>
+                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                              <div class="d-flex flex-row-reverse">
+                                <a href="#" class="btn btn-primary">Agregar al carrito</a>
+                              </div>
+                            </div>
+                          </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="card" style="width: 18rem;">
+                            <img src="https://http2.mlstatic.com/D_NQ_NP_801919-MLC52841284457_122022-V.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                              <h5 class="card-title">Card title</h5>
+                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                              <div class="d-flex flex-row-reverse">
+                                <a href="#" class="btn btn-primary">Agregar al carrito</a>
+                              </div>
+                            </div>
+                          </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="card" style="width: 18rem;">
+                            <img src="https://http2.mlstatic.com/D_NQ_NP_801919-MLC52841284457_122022-V.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                              <h5 class="card-title">Card title</h5>
+                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                              <div class="d-flex flex-row-reverse">
+                                <a href="#" class="btn btn-primary">Agregar al carrito</a>
+                              </div>
+                            </div>
+                          </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="container marketing">
+            <div class="m-3">
+                <h2>Comentários</h2>
+            </div>            
+        </section>
+    </main>
+    <footer class="mt-5">
+        <div class="container d-flex justify-content-around">
+            <p class="float-right"><a href="#">Volver al inicio</a></p>
+            <p>Tienda Bebidas, 2023</p>
         </div>
-    </div>
+
+    </footer>
     <script src="./app.js"></script>
-</body>
+  </body>
 </html>
