--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
             <div id="carouselExample" class="carousel slide">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="https://http2.mlstatic.com/D_NQ_NP_801919-MLC52841284457_122022-V.jpg" class="d-block w-100" alt="...">
+                    <img src="./imagen/bebidas-scaled.jpg" class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item">
-                    <img src="https://thumbs.dreamstime.com/z/caixas-da-cerveja-em-um-supermercado-ou-uma-loja-exterior-bebida-romena-durau-rom%C3%AAnia-%C2%BA-de-junho-151300319.jpg" class="d-block w-100" alt="...">
+                    <img src="./imagen/bebidas-scaled.jpg" class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item">
-                    <img src="https://http2.mlstatic.com/D_NQ_NP_801919-MLC52841284457_122022-V.jpg" class="d-block w-100" alt="...">
+                    <img src="./imagen/bebidas-scaled.jpg" class="d-block w-100" alt="...">
                   </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
