--- a/index.html
+++ b/index.html
@@ -1,141 +1,109 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>inicio</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="./app.js">
-  </head>
-  <body>
-    <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#">LOGO</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./productos.html">Productos</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./sobre.html">Sobre</a>
-                  </li>
-                </ul>
-                <form class="d-flex" role="search">
-                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
-                <div>
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                          <a class="nav-link active" aria-current="page" href="./contactanos.html">Contactanos </a>
-                        </li>
-                      </ul>
-                </div>
-              </div>
-            </div>
-          </nav>
-    </header>
-    <main>
-        <section>
-            <div id="carouselExample" class="carousel slide">
-                <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <img src="./imagen/bebidas-scaled.jpg" class="d-block w-100" alt="...">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="./imagen/bebidas-scaled.jpg" class="d-block w-100" alt="...">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="./imagen/bebidas-scaled.jpg" class="d-block w-100" alt="...">
-                  </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Next</span>
-                </button>
-              </div>
-        </section>
-        <section>
-            <div class="container-fluid">
-                <div class="m-3">
-                    <h2>Productos</h2>
-                </div>
-                <div class="row">
-                    <div class="col-md-3">
-                        <div class="card" style="width: 18rem;">
-                            <img src="https://http2.mlstatic.com/D_NQ_NP_801919-MLC52841284457_122022-V.jpg" class="card-img-top" alt="...">
-                            <div class="card-body">
-                              <h5 class="card-title">Card title</h5>
-                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                              <div class="d-flex flex-row-reverse">
-                                <a href="#" class="btn btn-primary">Agregar al carrito</a>
-                              </div>
-                            </div>
-                          </div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="card" style="width: 18rem;">
-                            <img src="https://http2.mlstatic.com/D_NQ_NP_801919-MLC52841284457_122022-V.jpg" class="card-img-top" alt="...">
-                            <div class="card-body">
-                              <h5 class="card-title">Card title</h5>
-                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                              <div class="d-flex flex-row-reverse">
-                                <a href="#" class="btn btn-primary">Agregar al carrito</a>
-                              </div>
-                            </div>
-                          </div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="card" style="width: 18rem;">
-                            <img src="https://http2.mlstatic.com/D_NQ_NP_801919-MLC52841284457_122022-V.jpg" class="card-img-top" alt="...">
-                            <div class="card-body">
-                              <h5 class="card-title">Card title</h5>
-                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                              <div class="d-flex flex-row-reverse">
-                                <a href="#" class="btn btn-primary">Agregar al carrito</a>
-                              </div>
-                            </div>
-                          </div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="card" style="width: 18rem;">
-                            <img src="https://http2.mlstatic.com/D_NQ_NP_801919-MLC52841284457_122022-V.jpg" class="card-img-top" alt="...">
-                            <div class="card-body">
-                              <h5 class="card-title">Card title</h5>
-                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                              <div class="d-flex flex-row-reverse">
-                                <a href="#" class="btn btn-primary">Agregar al carrito</a>
-                              </div>
-                            </div>
-                          </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section class="container marketing">
-            <div class="m-3">
-                <h2>Comentários</h2>
-            </div>            
-        </section>
-    </main>
-    <footer class="mt-5">
-        <div class="container d-flex justify-content-around">
-            <p class="float-right"><a href="#">Volver al inicio</a></p>
-            <p>Tienda Bebidas, 2023</p>
-        </div>
+<!DOCTYPE html>
+<html>
 
-    </footer>
-    <script src="./app.js"></script>
-  </body>
+<head>
+  <script src="https://kit.fontawesome.com/e8fa2e31b4.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="./styles.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+    integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+</head>
+
+<body>
+  <div class="header">
+    <div class="navbar">
+      <p>Almacén</p>
+      <ul>
+        <li><a href="#">Inicio</a></li>
+        <li><a href="#">Contactanos</a></li>
+      </ul>
+    </div>
+    <div class="navbar-b">
+      <div class="dropdown">
+        <select name="">
+          <option value="1">Vinos</option>
+          <option value="2">Cervezas</option>
+          <option value="3">Regalos</option>
+          <option value="4">Otros</option>
+        </select>
+      </div>
+      <div class="search">
+        <input type="search" placeholder="Search..." />
+        <i class="fa-solid fa-magnifying-glass"></i>
+      </div>
+    </div>
+  </div>
+  <div class="container">
+    <div class="my-5">
+      <h4>Mi carrito</h4>
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">ID</th>
+            <th scope="col">Producto</th>
+            <th scope="col">Cantidad</th>
+            <th scope="col">Agregar/Sacar</th>
+            <th scope="col">Total</th>
+          </tr>
+        </thead>
+        <tbody id="items"></tbody>
+        <tfoot>
+          <tr id="footer-carrito">
+            <th scope="row" colspan="5"> Tu carrito esta vacio!</th>
+          </tr>
+        </tfoot>
+      </table>
+    </div>
+
+    <div class="row" id="contenedor-productos"></div>
+
+
+  </div>
+
+  <template id="template-footer">
+    <th scope="row" colspan="2">Total productos</th>
+    <td>10</td>
+    <td>
+      <button class="btn btn-danger btn-sm" id="vaciar-carrito">
+        vaciar todo
+      </button>
+    </td>
+    <td class="font-weight-bold">$ <span>5000</span></td>
+  </template>
+
+  <template id="template-carrito">
+    <tr>
+      <th scope="row">id</th>
+      <td>Bebida</td>
+      <td>1</td>
+      <td>
+        <button class="btn btn-info btn-sm">
+          +
+        </button>
+        <button class="btn btn-danger btn-sm">
+          -
+        </button>
+      </td>
+      <td>$ <span>500</span></td>
+    </tr>
+  </template>
+
+  <template id="template-productos">
+    <div class="col-12 col-md-4 mb-3">
+      <div class="card">
+        <img src="" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">
+            Café
+          </h5>
+          <p class="card-text">$ <span>5000</span></p>
+          <button class="btn btn-warning">
+            Add al carrito
+          </button>
+        </div>
+      </div>
+    </div>
+  </template>
+  <script src="./app.js"></script>
+</body>
+
 </html>
