--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
       <td>Bebida</td>
       <td>1</td>
       <td>
-        <button class="btn btn-info btn-sm">
+        <button class="btn btn-success btn-sm">
           +
         </button>
-        <button class="btn btn-danger btn-sm">
+        <button class="btn btn-warning btn-sm">
           -
         </button>
       </td>
