--- a/index.html
+++ b/index.html
@@ -13,23 +13,9 @@
     <div class="navbar">
       <p>Almacén</p>
       <ul>
-        <li><a href="#">Inicio</a></li>
+        <li><a href="./index.html">Inicio</a></li>
         <li><a href="#">Contactanos</a></li>
       </ul>
-    </div>
-    <div class="navbar-b">
-      <div class="dropdown">
-        <select name="">
-          <option value="1">Vinos</option>
-          <option value="2">Cervezas</option>
-          <option value="3">Regalos</option>
-          <option value="4">Otros</option>
-        </select>
-      </div>
-      <div class="search">
-        <input type="search" placeholder="Search..." />
-        <i class="fa-solid fa-magnifying-glass"></i>
-      </div>
     </div>
   </div>
   <div class="container">
@@ -96,7 +82,7 @@
             Café
           </h5>
           <p class="card-text">$ <span>5000</span></p>
-          <button class="btn btn-warning">
+          <button class="btn btn-dark">
             Add al carrito
           </button>
         </div>
