--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <p>Almacén</p>
       <ul>
         <li><a href="./index.html">Inicio</a></li>
-        <li><a href="#">Contactanos</a></li>
+        <li><a href="./contacto.html">Formulario Cliente</a></li>
       </ul>
     </div>
   </div>
@@ -50,10 +50,15 @@
     <td>10</td>
     <td>
       <button class="btn btn-danger btn-sm" id="vaciar-carrito">
-        vaciar todo
+        Vaciar
       </button>
     </td>
     <td class="font-weight-bold">$ <span>5000</span></td>
+    <td>
+      <button class="btn btn-success btn-sm" id="finalizar-pedido">
+        <a href="./contacto.html">Finalizar Pedido</a>
+      </button>
+    </td>
   </template>
 
   <template id="template-carrito">
