--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <td class="font-weight-bold">$ <span>5000</span></td>
     <td>
       <button class="btn btn-success btn-sm" id="finalizar-pedido">
-        <a href="./contacto.html">Finalizar Pedido</a>
+        Finalizar Pedido
       </button>
     </td>
   </template>
