--- a/contacto.html
+++ b/contacto.html
@@ -50,7 +50,7 @@
                 </div>
             </div>
             <div class="col-12">
-                <button type="submit" class="btn btn-success">Enviar Pedido</button>
+                <button type="submit" class="btn btn-success">Enviar Formulario</button>
             </div>
         </form>
     </div>
