--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <li><a href="./contacto.html">Formulario Cliente</a></li>
       </ul>
     </div>
+    <div class="info-form">Si es tu primer pedido, llená el formulario para mas detalles de entrega.</div>
   </div>
   <div class="container">
     <div class="my-5">
