--- a/contacto.html
+++ b/contacto.html
@@ -38,7 +38,7 @@
                 <input type="text" class="form-control" id="inputAddress2" placeholder="Nº departamento">
             </div>
             <div class="col-md-6">
-                <label for="inputCity" class="form-label">Algun detalle de entrega:</label>
+                <label for="inputCity" class="form-label">Teléfono:</label>
                 <input type="text" class="form-control" id="inputCity">
             </div>
             <div class="col-12">
